Fixed Overlapping

--- a/Server/public/styles.css
+++ b/Server/public/styles.css
@@ -1,4 +1,4 @@
-* {
+/* * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -126,7 +126,7 @@ h5 {
   flex: 90%;
   display: flex;
   flex-direction: column;
-  /* z-index: 0; */
+  z-index: 0;
 }
 .half-top {
   height: 50%;
@@ -255,20 +255,6 @@ h5 {
   color: rgb(0, 191, 0);
 }
 
-.modal {
-  display: none; /* Hidden by default */
-  position: fixed; /* Stay in Place */
-  z-index: 1; /* Sit on top */
-  padding-top: 100px; /* Location of the box */
-  transition: all 2s ease-in-out;
-  /* left: 0;
-  top: 0; */
-  width: 100%;
-  height: 100%;
-  overflow: auto; /* Enable scroll if needed */
-  background-color: rgb(0, 0, 0); /* Fallback color */
-  background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
-}
 
 .modal-content {
   background-color: #fefefe;
@@ -286,4 +272,4 @@ footer {
   align-items: center;
   justify-content: center;
   padding: 200px;
-}
+} */
